--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "commander": "^13.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@jest/globals": "^30.2.0",
+    "@stylistic/eslint-plugin": "^5.7.0",
+    "eslint": "^9.39.2",
+    "globals": "^17.0.0",
     "jest": "^30.2.0",
-    "nock": "^14.0.10"
+    "nock": "^14.0.10",
+    "typescript-eslint": "^8.53.1"
   }
 }
