--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
-    "commander": "^13.1.0"
+    "commander": "^13.1.0",
+    "listr": "^0.14.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
