--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "commander": "^13.1.0",
+    "debug": "^4.4.3",
     "listr": "^0.14.3"
   },
   "devDependencies": {
